# http-api-rbac

./: README.md  authentication.py  authorization.py  pyproject.toml  requirements.txt
http_api_rbac/: __init__.py  authentication.py  authorization.py
tests/: __main__.py  test_authentication.py  test_authorization.py
