[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "http_api_rbac"
version = "0.1.0"
license = {file = "LICENSE"}

description = "Authentication and authorization library meant to be used by BringAuto HTTP APIs."
authors = [{name = "BringAuto", email = "fleet@bringauto.com"},]
maintainers = [{name = "BringAuto", email = "fleet@bringauto.com"},]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)"
]

readme="README.md"

[project.urls]
homepage = "https://github.com/bringauto/http-api-rbac"